migrate to Next.js

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -166,3 +166,13 @@ a.secondary {
     filter: invert();
   }
 }
+
+.blinking {
+  animation: blink 3s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
